service.yaml
apiVersion: v1
kind: Service
metadata:
  name: #CI_PROJECT_NAME#
  namespace: #CI_PROJECT_ROOT_NAMESPACE#-#CI_PROJECT_NAME#
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8052
  selector:
    app: #CI_PROJECT_NAME#
  type: ClusterIP
